# OpenGL-GLFW

./: CMakeLists.txt  README.md
include/: EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
res/shaders/: default.frag  default.vert
shaders/: default.frag  default.vert  shader.fs  shader.vs
src/: EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
